--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -15,7 +15,7 @@
 #Upload {
   position: relative;
   top: 200px;
-  height: 750px;
+  height: 830px;
 }
 #upload_bgd {
   position:absolute;
@@ -101,6 +101,23 @@
   text-decoration:none;
   color:#000000;
   text-align:left;
+}
+#Title_hint {
+  visibility: hidden;
+  position:absolute;
+  left:500px;
+  top:160px;
+  width:148px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
+  position:absolute;
+  left:900px;
+  top:160px;
+  width:148px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
 }
 #Discription_txt {
   position:absolute;
@@ -218,9 +235,59 @@
   width:216px;
   word-wrap:break-word;
 }
+#Upload_image {
+  visibility: hidden;
+  position:fixed;
+  left:50%;
+  margin-left:-260px;
+  top:50%;
+  margin-top:-171px;
+}
+#Upload_image_bgd {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:520px;
+  height:342px;
+}
+#Upload_image_close {
+  position:absolute;
+  left:470px;
+  top:10px;
+  width:40px;
+  height:40px;
+}
+#Upload_image_img {
+  position:absolute;
+  left:40px;
+  top:46px;
+  width:250px;
+  height:250px;
+}
+#Upload_image_txt {
+  position:absolute;
+  left:150px;
+  top:220px;
+  width:235px;
+  height:13px;
+}
+#Upload_image_file {
+  position:absolute;
+  left:330px;
+  top:158px;
+  width:130px;
+  height:25px;
+  font-family:'ArialMT', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
 #blank {
   position: relative;
-  height: 170px;
+  height: 150px;
 }
 #Footer{
   position:relative;
