--- a/templates/Transformation/upload.html
+++ b/templates/Transformation/upload.html
@@ -13,82 +13,88 @@
   <body>
     <div id="base" class="">
 
-      <div id='header'>
+  <div id='header'>
+        <!-- Logo -->
+        <div id='logo'>
+          <p id="Logo_title1">Super</p>
+          <p id="Logo_title2">JiJi</p>
+          <img id="Logo_circle" src="/static/images/header/logo_header.png"/>
+        </div>
+        <!-- Navigator -->
+        <ul id='Navigator'>
+          <li id = "Nav_Home">
+              <p id="Txt_home">Home</p>
+              <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
+          </li>
+          <li id = "Nav_Video">
+            <p id="Txt_video">Video</p>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
+          <li>
+          <li id = "Nav_Audio">
+            <p id="Txt_audio">Audio</p>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
+          </li>
+          <li id = "Nav_Image">
+            <p id="Txt_image">Image</p>
+            <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
+          <li>
+        </ul>
+        <!-- Search -->
+        <div id = 'Search'>
+          <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
+          <div id = 'User'>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <p id="User_circle1" class="paragraph">○</p>
+            <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
+            <p id="User_circle2" class="paragraph">○</p>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
+          </div>
+          <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+        </div>
+        <!-- Login -->
+        <div id="Login">
+          <div id="Login_containt" style="display:none;">
+            <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
             <!-- Logo -->
-            <div id='logo'>
-              <p id="Logo_title1">Super</p>
-              <p id="Logo_title2">JiJi</p>
-              <img id="Logo_circle" src="/static/images/header/logo_header.png"/>
-            </div>
-            <!-- Navigator -->
-            <ul id='Navigator'>
-              <li id = "Nav_Home">
-                  <p id="Txt_home">Home</p>
-                  <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-                  <a id = "Hot_home" class="Hot" href="./index.html"></a>
-              </li>
-              <li id = "Nav_Video">
-                <p id="Txt_video">Video</p>
-                <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
-                <a id= "Hot_video" class="Hot" href="./video.html"></a>
-              <li>
-              <li id = "Nav_Audio">
-                <p id="Txt_audio">Audio</p>
-                <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
-                <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
-              </li>
-              <li id = "Nav_Image">
-                <p id="Txt_image">Image</p>
-                <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-                <a id= "Hot_image" class="Hot" href="./image.html"></a>
-              <li>
-            </ul>
-            <!-- Search -->
-            <div id = 'Search'>
-              <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
-              <div id = 'User'>
-                <a href="personal_page.html" ><p id="User_name" class="paragraph">Username</p></a>
-                <p id="User_circle1" class="paragraph">○</p>
-                <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
-                <p id="User_circle2" class="paragraph">○</p>
-                <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
-              </div>
-              <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-              <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
-            </div>
+            <p id="Login_logo_title1">Super</p>
+            <p id="Login_logo_title2">JiJi</p>
+            <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
+
+            <form id="Input" action="action_page.php">
+                <p id="email_txt">E-mail Address</p>
+                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <input id="email_input" type="email" name="E-mail" value=""/>
+
+                <p id="pwd_txt">Password</p>
+                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <input id="pwd_input" type="password" name="pwd" value=""/>
+            </form> 
             <!-- Login -->
-            <div id="Login">
-              <div id="Login_containt" style="display:none;">
-              <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
-              <!-- Logo -->
-              <p id="Login_logo_title1">Super</p>
-              <p id="Login_logo_title2">JiJi</p>
-              <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
-
-              <form id="Input" action="action_page.php">
-                  <p id="email_txt">E-mail Address</p>
-                  <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
-                  <input id="email_input" type="email" name="E-mail" value=""/>
-
-                  <p id="pwd_txt">Password</p>
-                  <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
-                  <input id="pwd_input" type="password" name="pwd" value=""/>
-              </form> 
-              <!-- Login -->
-              <a id="Login_button" class="shape" href="#">
-                <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-                <p id="Login_button_txt" class="text">LOGIN</p>
-              </a>
-              <!-- Sign up -->
-              <a id="Face_button" class="shape" href="#">
-                <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-                <p id="Login_button_txt" class="text">FACE LOGIN</p>
-              </a>
-            </div>
-            <div id="Login_body" style="display:none;">
-              </div>
-            </div>
-      </div>
+            <a id="Login_button" class="shape" href="#">
+              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+              <p id="Login_button_txt" class="text">LOGIN</p>
+            </a>
+            <!-- Sign up -->
+            <a id="Face_button" class="shape" href="#">
+              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+              <p id="Login_button_txt" class="text">FACE LOGIN</p>
+            </a>
+          </div>
+          <div id="Login_body" style="display:none;">
+          </div>
+          <div id="Face_login_page">
+            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
+            <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
+            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
+            <a href="#"><p id="Face_login_button">Login</p></a>
+          </div>
+        </div>
+  </div>
 
       <div id="Upload">
         <img id="upload_bgd" class="ax_shape" src="/static/images/upload/u56.png"/>
@@ -105,6 +111,7 @@
 
         <p id="Title_txt" class="h2">Title:</p>
         <input id="Title_input" class="ax_text_field" type="text" value=""/>
+        <p id="Title_hint" class="paragraph">Title cannot be none!</p>
 
         <p id="Discription_txt" class="h2">Discription:</p>
         <textarea id="Discription_input" class="ax_text_area"></textarea>
@@ -155,20 +162,29 @@
           <p id="Upload_bt_txt" class="text">Upload</p>
         </a>
       </div>
+
+      <div id="Upload_image">
+        <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
+        <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
+        <img id="Upload_image_img" src="/static/images/edit/u98.png"/>
+        <p id="Upload_image_txt" class="paragraph">左边放头像，右边放一些处理图片的工具</p>
+        <input id="Upload_image_file" type="file" value=""/>
+      </div>
+      
       <div id="blank"></div>
       <!-- Footer -->
       <div id = "Footer">
-        <p id="Footer_txt_1" class="paragraph">Contact us</p>
-        <p id="Footer_txt_2" class="paragraph">About this website.</p>
-        <p id="Footer_txt_3" class="paragraph">Join us</p>
-        <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
-        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-        <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
-      </div>
+          <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+          <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+          <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+          <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
+          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+          <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
+        </div>
     </div>
   </body>
 </html>
