--- a/templates/Webpages/audio.html
+++ b/templates/Webpages/audio.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/static/js/audio.js"></script>
 </head>
 <body>
-	 <div id='header'>
+  <div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -22,68 +22,74 @@
         <ul id='Navigator'>
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
-              <img id= "Line_home" class="Line" src="/static//static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="/"></a>
+              <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line"src="/static//static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line"src="/static//static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
-            <img id= "Line_image" class="Line" src="/static//static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="personal_page.html" ><p id="User_name" class="paragraph">Username</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
             <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
           <div id="Login_containt" style="display:none;">
-          <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
-          <!-- Logo -->
-          <p id="Login_logo_title1">Super</p>
-          <p id="Login_logo_title2">JiJi</p>
-          <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
+            <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
+            <!-- Logo -->
+            <p id="Login_logo_title1">Super</p>
+            <p id="Login_logo_title2">JiJi</p>
+            <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
 
-          <form id="Input" action="action_page.php">
-              <p id="email_txt">E-mail Address</p>
-              <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
-              <input id="email_input" type="email" name="E-mail" value=""/>
+            <form id="Input" action="action_page.php">
+                <p id="email_txt">E-mail Address</p>
+                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <input id="email_input" type="email" name="E-mail" value=""/>
 
-              <p id="pwd_txt">Password</p>
-              <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
-              <input id="pwd_input" type="password" name="pwd" value=""/>
-          </form> 
-          <!-- Login -->
-          <a id="Login_button" class="shape" href="#">
-            <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-            <p id="Login_button_txt" class="text">LOGIN</p>
-          </a>
-          <!-- Sign up -->
-          <a id="Face_button" class="shape" href="#">
-            <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-            <p id="Login_button_txt" class="text">FACE LOGIN</p>
-          </a>
-        </div>
-        <div id="Login_body" style="display:none;">
+                <p id="pwd_txt">Password</p>
+                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <input id="pwd_input" type="password" name="pwd" value=""/>
+            </form> 
+            <!-- Login -->
+            <a id="Login_button" class="shape" href="#">
+              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+              <p id="Login_button_txt" class="text">LOGIN</p>
+            </a>
+            <!-- Sign up -->
+            <a id="Face_button" class="shape" href="#">
+              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+              <p id="Login_button_txt" class="text">FACE LOGIN</p>
+            </a>
+          </div>
+          <div id="Login_body" style="display:none;">
+          </div>
+          <div id="Face_login_page">
+            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
+            <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
+            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
+            <a href="#"><p id="Face_login_button">Login</p></a>
           </div>
         </div>
   </div>
@@ -142,55 +148,37 @@
   </div>
 
   <div class="display_detail">
-
-      <div id = "Audio0" class="audio_display">
-        <p class="Title">Music</p>
+      {% for k, a in audio_list.items %}
+      <div id = "Audio{{ forloop.counter0 }}" class="audio_display">
+        <p class="Title">{{ k }}</p>
         <a class="More" href="#" style="text-decoration:underline;">more</a>
         <ul id="display_detail0" class="display">
+        {% for audio in a %}
+          <li>
+            <div class="item">
+              <img id="item_cover" src="{{ audio.cover.url }}"/>
+              <div id="item_change">
+                <img id="item_change_img" src="/static/images/audio/up.png"/>
+              </div>
+              <p id="item_rank">{{ forloop.counter }}</p>
+              <img id="play_bg" src="/static/images/audio/play_bg_u82.png"/>
+              <a href="/audio_playpage/{{ audio.audio }}">
+                <img id="play_tri" src="/static/images/audio/play_tri_u84.png"/>
+              </a>
+              <p id="item_title">{{ audio.title }}</p>
+              <p id="item_singer">The chainsmokers Featuring Halsey</p>
+            </div>
+          </li>
+        {% endfor %}
         </ul>
       </div>
-      
-      <div id = "Audio1" class="audio_display">
-        <p class="Title">Audio_book</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-
-        <ul id = "display_detail1" class="display">
-        </ul>
-      </div>
-
-      <div id = "Audio2" class="audio_display">
-        <p class="Title">Talkshow</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail2" class="display">
-        </ul>
-      </div>
-
-      <div id = "Audio3" class="audio_display">
-        <p class="Title">Entertainment</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail3" class="display">
-        </ul>
-      </div>
-
-      <div id = "Audio4" class="audio_display">
-        <p class="Title">News</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail4" class="display">
-        </ul>
-      </div>
-
-      <div id = "Audio5" class="audio_display">
-        <p class="Title">Others</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail5" class="display">
-        </ul>
-      </div>
+      {% endfor %}
 
       <!-- Footer -->
       <div id = "Footer">
-        <p id="Footer_txt_1" class="paragraph">Contact us</p>
-        <p id="Footer_txt_2" class="paragraph">About this website.</p>
-        <p id="Footer_txt_3" class="paragraph">Join us</p>
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
         <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
         <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
         <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
