--- a/templates/Webpages/audio_display.html
+++ b/templates/Webpages/audio_display.html
@@ -13,6 +13,7 @@
   <script src="/static/audioplayerengine/amazingaudioplayer.js"></script>
   <link rel="stylesheet" type="text/css" href="/static/audioplayerengine/initaudioplayer-1.css">
   <script src="/static/audioplayerengine/initaudioplayer-1.js"></script>
+  <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
   <body>
     <div id="base" class="">
@@ -29,36 +30,36 @@
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
               <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="./index.html"></a>
+              <a id = "Hot_home" class="Hot" href="/"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="./video.html"></a>
+            <img id= "Line_video" class="Line" src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="/video"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
+            <img id= "Line_audio" class="Line" src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="/audio"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="./image.html"></a>
+            <a id= "Hot_image" class="Hot" href="/gallery"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <a href="/personal_page/{{ username }}" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="/transform/upload"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
@@ -71,11 +72,11 @@
 
             <form id="Input" action="action_page.php">
                 <p id="email_txt">E-mail Address</p>
-                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <a href="/login/register/"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
                 <input id="email_input" type="email" name="E-mail" value=""/>
 
                 <p id="pwd_txt">Password</p>
-                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
                 <input id="pwd_input" type="password" name="pwd" value=""/>
             </form> 
             <!-- Login -->
@@ -91,11 +92,16 @@
           </div>
           <div id="Login_body" style="display:none;">
           </div>
-          <div id="Face_login_page">
-            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
+          <div id="Face_login_bgd" style="visibility:hidden;">
+            <img id="Face_login_bgd_img" src="/static/images/edit/u94.png"/>
             <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
-            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
-            <a href="#"><p id="Face_login_button">Login</p></a>
+          </div>
+          <div id="Face_login_page" style="visibility:hidden;">
+            <p id="face_email_txt">E-mail</p>
+            <input id="username" type="text">
+            <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
+            <div id="webcam"></div>
           </div>
         </div>
   </div>
@@ -227,19 +233,30 @@
         </ul>
         <div id="blank"></div>
         <!-- Footer -->
-        <div id = "Footer">
-          <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-          <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-          <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
-          <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
-          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-          <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
-          <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
-          <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
-          <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
-        </div>
+      <div id = "Footer">
+        <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+        <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
+        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+        <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
+        <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
+        <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
+        <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
+      </div>
       </div>
     </div>
   </body>
+<script type="text/javascript">
+  $("#capture_btn").click(function(){
+      webcam.capture();
+  });
+</script>
+{% if username %}
+    <script>
+        document.getElementById("Search_login").style.visibility="hidden";
+        document.getElementById("User").style.visibility="visible";
+    </script>
+{% endif %}
 </html>
