--- a/templates/Webpages/previous11.25/audio.html
+++ b/templates/Webpages/previous11.25/audio.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Video</title>
+	<title>Audio</title>
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/video.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/audio.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/video.js"></script>
-  <script src="/static/js/jquery.webcam.min.js"></script>
+  <script type="text/javascript" src="/static/js/audio.js"></script>
 </head>
 <body>
-	<div id='header'>
+  <div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -24,36 +23,36 @@
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
               <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="/"></a>
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="/personal_page/{{ username }}" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="/transform/upload"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
@@ -66,11 +65,11 @@
 
             <form id="Input" action="action_page.php">
                 <p id="email_txt">E-mail Address</p>
-                <a href="/login/register/"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
                 <input id="email_input" type="email" name="E-mail" value=""/>
 
                 <p id="pwd_txt">Password</p>
-                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
                 <input id="pwd_input" type="password" name="pwd" value=""/>
             </form> 
             <!-- Login -->
@@ -86,29 +85,25 @@
           </div>
           <div id="Login_body" style="display:none;">
           </div>
-          <div id="Face_login_bgd" style="visibility:hidden;">
-            <img id="Face_login_bgd_img" src="/static/images/edit/u94.png"/>
+          <div id="Face_login_page">
+            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
             <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
-          </div>
-          <div id="Face_login_page" style="visibility:hidden;">
-            <p id="face_email_txt">E-mail</p>
-            <input id="username" type="text">
-            <button id="capture_btn">Capture</button>
-            <button id="Face_login_button">Login(之后合并到Capture)</button>
-            <div id="webcam"></div>
+            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
+            <a href="#"><p id="Face_login_button">Login</p></a>
           </div>
         </div>
   </div>
+  <!-- Photo -->
   <div class="Photo_display">
     <!-- Photo -->
-  	<div id='photo'>
-  		<ul>
-  			<li id='li1'><a href='#'><img src='/static/images/home/photo_1.jpg'/></a></li>
-  			<li id='li2'><a href='#'><img src='/static/images/home/photo_2.png'/></a></li>
-  			<li id='li3'><a href='#'><img src='/static/images/home/photo_3.jpg'/></a></li>
-  			<li id='li4'><a href='#'><img src='/static/images/home/photo_4.jpg'/></a></li>
-  		</ul>
-  	</div>
+    <div id='photo'>
+      <ul>
+        <li id='li1'><a href='#'><img src='/static/images/home/photo_1.jpg'/></a></li>
+        <li id='li2'><a href='#'><img src='/static/images/home/photo_2.png'/></a></li>
+        <li id='li3'><a href='#'><img src='/static/images/home/photo_3.jpg'/></a></li>
+        <li id='li4'><a href='#'><img src='/static/images/home/photo_4.jpg'/></a></li>
+      </ul>
+    </div>
     <!-- next -->
     <a id="next" href="#">
       <img class="photo_nav_bgd" src="/static/images/home/next_u123.png"/>
@@ -153,29 +148,37 @@
   </div>
 
   <div class="display_detail">
-      {% for k, v in video_list.items %}
-      <div id = "Video{{ forloop.counter0 }}" class="video_display">
+      {% for k, a in audio_list.items %}
+      <div id = "Audio{{ forloop.counter0 }}" class="audio_display">
         <p class="Title">{{ k }}</p>
-        <a class="More" href="/search" style="text-decoration:underline;">more</a>
-        <ul id = "display_detail{{ forloop.counter0 }}" class="display">
-            {% for video in v %}
-                <li id="item{{ forloop.counter0 }}">
-                    <img src="{{ video.cover.url }}">
-                    <p>{{ video.title }}</p>
-                    <a href="/playpage/{{ video.video }}"></a>
-                </li>
-            {% endfor %}
+        <a class="More" href="#" style="text-decoration:underline;">more</a>
+        <ul id="display_detail0" class="display">
+        {% for audio in a %}
+          <li>
+            <div class="item">
+              <img id="item_cover" src="{{ audio.cover.url }}"/>
+              <div id="item_change">
+                <img id="item_change_img" src="/static/images/audio/up.png"/>
+              </div>
+              <p id="item_rank">{{ forloop.counter }}</p>
+              <img id="play_bg" src="/static/images/audio/play_bg_u82.png"/>
+              <a href="/audio_playpage/{{ audio.audio }}">
+                <img id="play_tri" src="/static/images/audio/play_tri_u84.png"/>
+              </a>
+              <p id="item_title">{{ audio.title }}</p>
+              <p id="item_singer">The chainsmokers Featuring Halsey</p>
+            </div>
+          </li>
+        {% endfor %}
         </ul>
       </div>
       {% endfor %}
 
-
-
       <!-- Footer -->
       <div id = "Footer">
-        <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-        <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-        <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
         <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
         <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
         <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
@@ -187,15 +190,6 @@
     </div>
 </body>
 <script type="text/javascript">
-  $('#photo').slider();
-  $("#capture_btn").click(function(){
-      webcam.capture();
-  });
+	$('#photo').slider();
 </script>
-{% if username %}
-    <script>
-        document.getElementById("Search_login").style.visibility="hidden";
-        document.getElementById("User").style.visibility="visible";
-    </script>
-{% endif %}
 </html>
