--- a/templates/Webpages/previous11.25/edit.html
+++ b/templates/Webpages/previous11.25/edit.html
@@ -1,17 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Reset Password</title>
+  <title>Personal page</title>
   <meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/edit.css">
   <script type="text/javascript" src="/static/js/jquery.js"></script>
   <script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/reset.js"></script>
-  <script src="/static/js/jquery.webcam.min.js"></script>
+  <script type="text/javascript" src="/static/js/edit.js"></script>
 </head>
   <body>
+    <div id="base" class="">
+
   <div id='header'>
         <!-- Logo -->
         <div id='logo'>
@@ -24,36 +25,36 @@
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
               <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="/"></a>
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="/personal_page/{{ username }}" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="/transform/upload"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
@@ -66,11 +67,11 @@
 
             <form id="Input" action="action_page.php">
                 <p id="email_txt">E-mail Address</p>
-                <a href="/login/register/"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
                 <input id="email_input" type="email" name="E-mail" value=""/>
 
                 <p id="pwd_txt">Password</p>
-                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
                 <input id="pwd_input" type="password" name="pwd" value=""/>
             </form> 
             <!-- Login -->
@@ -86,44 +87,49 @@
           </div>
           <div id="Login_body" style="display:none;">
           </div>
-          <div id="Face_login_bgd" style="visibility:hidden;">
-            <img id="Face_login_bgd_img" src="/static/images/edit/u94.png"/>
+          <div id="Face_login_page">
+            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
             <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
-          </div>
-          <div id="Face_login_page" style="visibility:hidden;">
-            <p id="face_email_txt">E-mail</p>
-            <input id="username" type="text">
-            <button id="capture_btn">Capture</button>
-            <button id="Face_login_button">Login(之后合并到Capture)</button>
-            <div id="webcam"></div>
+            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
+            <a href="#"><p id="Face_login_button">Login</p></a>
           </div>
         </div>
   </div>
-    
-    <div id="base" class="">
+      
+      <div id="Edit">
 
-      <img id="Reset_bgd" src="/static/images/video_display/u0.png"/>
-      <p id="Reset_txt" class="h2">Reset password</p>
+        <img id="Edit_bgd" src="/static/images/edit/u0.png"/>
+        <p id="Edit_title" class="h2">Personal Page Edit</p>
+        <a href="#"><img id="Edit_img" src="/static/images/edit/u60.png"/></a>
+        
+        <a href="personal_page.html" id= "Edit_update">
+            <img id="Edit_update_bt" src="/static/images/edit/u62.png"/>
+            <p id="Edit_update_txt">Update</p>
+        </a>
+        
+        <p id="Edit_name_txt" class="h2">Username:</p>
 
-      <p id="reset_npwd_txt" class="h2">New Password:</p>
-      <input id="reset_npwd_input" class="ax_text_field" type="password" value=""/>
-      <p id="reset_npwd_hint" class="paragraph">Password is too short!</p>
+        <input id="Edit_name_input" class="ax_text_field" type="text" value="Starboy"/>
 
-      <p id="reset_rpwd_txt" class="h2">Reenter Password:</p>
-      <input id="reset_rpwd_input" class="ax_text_field" type="password" value=""/>
-      <p id="reset_rpwd_hint" class="paragraph">Different passwords!</p>
+        <p id="Edit_discription_txt" class="h2">Discription:</p>
 
-      <a id="reset_bt" class="shape" href="/">
-        <img id="reset_bt_img" class="img " src="/static/images/edit/u62.png"/>
-        <p id="reset_bt_txt">Change</p>
-      </a>
-    </div>
+        <textarea id="Edit_discription_input" class="ax_text_area">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</textarea>
+      </div>
 
-    <div id="blank"></div>
-    <div id = "Footer">
-        <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-        <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-        <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+      <div id="Upload_image">
+        <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
+        <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
+        <img id="Upload_image_img" src="/static/images/edit/u98.png"/>
+        <p id="Upload_image_txt" class="paragraph">左边放头像，右边放一些处理图片的工具</p>
+        <input id="Upload_image_file" type="file" value=""/>
+      </div>
+
+      <div id="blank"></div>
+       <!-- Footer -->
+      <div id = "Footer">
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
         <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
         <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
         <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
@@ -132,16 +138,6 @@
         <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
         <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
       </div>
+    </div>
   </body>
-<script type="text/javascript">
-  $("#capture_btn").click(function(){
-      webcam.capture();
-  });
-</script>
-{% if username %}
-    <script>
-        document.getElementById("Search_login").style.visibility="hidden";
-        document.getElementById("User").style.visibility="visible";
-    </script>
-{% endif %}
 </html>
