--- a/templates/Webpages/previous11.25/image_display.html
+++ b/templates/Webpages/previous11.25/image_display.html
@@ -1,18 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Video display</title>
+  <title>Image display</title>
   <meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/video_display.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/image_display.css">
   <script type="text/javascript" src="/static/js/jquery.js"></script>
   <script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/video_display.js"></script>
-  <script src="/static/js/jquery.webcam.min.js"></script>
+  <script type="text/javascript" src="/static/js/image_display.js"></script>
 </head>
   <body>
     <div id="base" class="">
+
   <div id='header'>
         <!-- Logo -->
         <div id='logo'>
@@ -25,36 +25,36 @@
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
               <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="/"></a>
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="/personal_page/{{ username }}" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="/transform/upload"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
@@ -67,11 +67,11 @@
 
             <form id="Input" action="action_page.php">
                 <p id="email_txt">E-mail Address</p>
-                <a href="/login/register/"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+                <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
                 <input id="email_input" type="email" name="E-mail" value=""/>
 
                 <p id="pwd_txt">Password</p>
-                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+                <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
                 <input id="pwd_input" type="password" name="pwd" value=""/>
             </form> 
             <!-- Login -->
@@ -87,26 +87,22 @@
           </div>
           <div id="Login_body" style="display:none;">
           </div>
-          <div id="Face_login_bgd" style="visibility:hidden;">
-            <img id="Face_login_bgd_img" src="/static/images/edit/u94.png"/>
+          <div id="Face_login_page">
+            <img id="Face_login_bgd" src="/static/images/edit/u94.png"/>
             <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
-          </div>
-          <div id="Face_login_page" style="visibility:hidden;">
-            <p id="face_email_txt">E-mail</p>
-            <input id="username" type="text">
-            <button id="capture_btn">Capture</button>
-            <button id="Face_login_button">Login(之后合并到Capture)</button>
-            <div id="webcam"></div>
+            <p id="Face_login_txt" class="paragraph">这里放面部识别登陆的部分</p>
+            <a href="#"><p id="Face_login_button">Login</p></a>
           </div>
         </div>
   </div>
 
       <div id="Display_image">
-        <p id="Image_txt" class="h2">GIPFEL</p>
-        <img id="Image_bgd" class="shape" src="/static/images/video_display/u0.png"/>
-        <div style="position: absolute;left: 150px;top: 30px;width: 1100px;height: 600px;"><div id="a1"></div></div>
+          <p id="Image_txt" class="h2">Image</p>
+          <img id="Image_bgd" class="shape" src="/static/images/video_display/u0.png"/>
+          <img id="Image_display" src="{{ picture.picture.url }}"/>
+          <p id="Image_title" class="h1">{{ picture.title }}</p>
+          <p id="Image_discription" class="paragraph"> {{ picture.discription }} </p>
 
-        <div id="icon">
           <a href="#"><img id="Image_download_icon" src="/static/images/video_display/u58.png"/></a>
           <p id="Image_download_txt" class="h2">Download</p>
           <a href="#"><img id="Image_like_icon" class="image" src="/static/images/video_display/u62.png"/></a>
@@ -117,19 +113,18 @@
           <p id="Image_dislike_num" class="h2">4</p>
           <a href="#"><img id="Image_collect_icon" class="shape" src="/static/images/video_display/u56.png"/></a>
           <p id="Image_collect_txt" class="h2">Collect</p>
-        </div>
       </div>
 
       <div id="Download_page">
           <img id="Download_bgd" src="/static/images/edit/u94.png"/>
           <a href="#"><img id="Download_close" src="/static/images/edit/close.png"/></a>
-          <p id="Download_title" class="h2">Download Video</p>
+          <p id="Download_title" class="h2">Download Image</p>
 
-          <p id="Download_choice0" class="paragraph">MP4</p>
-          <p id="Download_choice1" class="paragraph">MPEG-4</p>
-          <p id="Download_choice2" class="paragraph">3GP</p>
-          <p id="Download_choice3" class="paragraph">AVI</p>
-          <p id="Download_choice4" class="paragraph">MKV</p>
+          <p id="Download_choice0" class="paragraph">JPEG</p>
+          <p id="Download_choice1" class="paragraph">JPG</p>
+          <p id="Download_choice2" class="paragraph">PNG</p>
+          <p id="Download_choice3" class="paragraph">BMP</p>
+          <p id="Download_choice4" class="paragraph">GIF</p>
           
           <a href="#"><p id="Download_address0" class="paragraph">Download Address</p></a>
           <a href="#"><p id="Download_address1" class="paragraph">Download Address</p></a>
@@ -137,20 +132,12 @@
           <a href="#"><p id="Download_address3" class="paragraph">Download Address</p></a>
           <a href="#"><p id="Download_address4" class="paragraph">Download Address</p></a>
       </div>
-      
-      <div id="Display_discription">
-        <img id="Discription_bgd" class="shape" src="/static/images/video_display/u80.png"/>
-        <p id="Discription_title" class="h2">Discription</p>
-        <img id="Discription_cover" src="/static/images/home/photo_1.jpg"/>
-        <p id="Discription_name" class="h2">GIPFEL</p>
-        <p id="Discription_txt" class="paragraph">Proin facilisis elit vitae mollis faucibus. Proin vitae massa nec mauris dictum consequat. Maecenas congue non felis a malesuada. Phasellus ullamcorper laoreet felis eu viverra. In at tincidunt tortor. Praesent tempor eros vitae elit dignissim, vitae elementum dui dapibus. Duis tristique, ligula eget lobortis accumsan, nibh enim venenatis urna, a commodo elit ex ac urna.</p>
-      </div>
 
       <div id="Display_author">
         <img id="Author_bgd" class="shape" src="/static/images/video_display/u76.png"/>
         <p id="Author_txt" class="h2">Author</p>
         <img id="Author_img" class="image" src="/static/images/video_display/image_u125.jpg"/>
-        <a href="/personal_page/{{ username }}"><p id="Author_name" class="h2">Starboy</p></a>
+        <a href="personal_page.html"><p id="Author_name" class="h2">Starboy</p></a>
         <p id="Author_discription" class="paragraph">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
       </div>
 
@@ -202,8 +189,8 @@
         <ul>
           <li id="comment0" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
             <!-- comment (Shape) -->
             <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
             <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
@@ -214,8 +201,8 @@
           </li>
           <li id="comment1" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
             <!-- comment (Shape) -->
             <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
             <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
@@ -227,48 +214,19 @@
         </ul>
         <div id="blank"></div>
         <!-- Footer -->
-      <div id = "Footer">
-        <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-        <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-        <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
-        <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
-        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-        <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
-      </div>
+        <div id = "Footer">
+          <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+          <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+          <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+          <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
+          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+          <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
+        </div>
       </div>
     </div>
-
-  <!--ckplayer js-->
-    <script type="text/javascript">
-		var isLive=false;
-	</script>
-	<script type="text/javascript" src="/static/ckplayer/ckplayer/ckplayer.js" charset="utf-8"></script>
-	<script type="text/javascript" src="/static/ckplayer/js/barrage.js" charset="utf-8"></script>
-	<script type="text/javascript">
-
-		var flashvars={
-			f:'{{ video.video.url }}',
-			c:0,
-			b:0,
-			loaded:'loadedHandler'
-			};
-		var video=['http://movie.ks.js.cn/flv/other/1_0.mp4->video/mp4'];
-		CKobject.embed('/static/ckplayer/ckplayer/ckplayer.swf','a1','ckplayer_a1','1100','600',false,flashvars,video)
-	</script>
-<script type="text/javascript">
-  $("#capture_btn").click(function(){
-      webcam.capture();
-  });
-</script>
-    {% if username %}
-    <script>
-        document.getElementById("Search_login").style.visibility="hidden";
-        document.getElementById("User").style.visibility="visible";
-    </script>
-    {% endif %}
   </body>
 </html>
