--- a/templates/Webpages/previous11.25/video_display.html
+++ b/templates/Webpages/previous11.25/video_display.html
@@ -9,11 +9,10 @@
   <script type="text/javascript" src="/static/js/jquery.js"></script>
   <script type="text/javascript" src="/static/js/header.js"></script>
   <script type="text/javascript" src="/static/js/video_display.js"></script>
-  <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
   <body>
     <div id="base" class="">
-  <div id='header'>
+    <div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -25,81 +24,70 @@
           <li id = "Nav_Home">
               <p id="Txt_home">Home</p>
               <img id= "Line_home" class="Line" src="/static/images/header/line.png" />
-              <a id = "Hot_home" class="Hot" href="/"></a>
+              <a id = "Hot_home" class="Hot" href="./index.html"></a>
           </li>
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
-            <img id= "Line_video" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
-            <img id= "Line_audio" class="Line" src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="/personal_page/{{ username }}" ><p id="User_name" class="paragraph">{{ username }}</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="/transform/upload"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
           <div id="Login_containt" style="display:none;">
-            <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
-            <!-- Logo -->
-            <p id="Login_logo_title1">Super</p>
-            <p id="Login_logo_title2">JiJi</p>
-            <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
+          <img id="Login_bgd" src="/static/images/header/Login_bgd.png">
+          <!-- Logo -->
+          <p id="Login_logo_title1">Super</p>
+          <p id="Login_logo_title2">JiJi</p>
+          <img id="Login_logo_circle" src="/static/images/header/logo_login.png"/>
 
-            <form id="Input" action="action_page.php">
-                <p id="email_txt">E-mail Address</p>
-                <a href="/login/register/"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
-                <input id="email_input" type="email" name="E-mail" value=""/>
+          <form id="Input" action="action_page.php">
+              <p id="email_txt">E-mail Address</p>
+              <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+              <input id="email_input" type="email" name="E-mail" value=""/>
 
-                <p id="pwd_txt">Password</p>
-                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
-                <input id="pwd_input" type="password" name="pwd" value=""/>
-            </form> 
-            <!-- Login -->
-            <a id="Login_button" class="shape" href="#">
-              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-              <p id="Login_button_txt" class="text">LOGIN</p>
-            </a>
-            <!-- Sign up -->
-            <a id="Face_button" class="shape" href="#">
-              <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
-              <p id="Login_button_txt" class="text">FACE LOGIN</p>
-            </a>
-          </div>
-          <div id="Login_body" style="display:none;">
-          </div>
-          <div id="Face_login_bgd" style="visibility:hidden;">
-            <img id="Face_login_bgd_img" src="/static/images/edit/u94.png"/>
-            <a href="#"><img id="Face_login_close" src="/static/images/edit/close.png"/></a>
-          </div>
-          <div id="Face_login_page" style="visibility:hidden;">
-            <p id="face_email_txt">E-mail</p>
-            <input id="username" type="text">
-            <button id="capture_btn">Capture</button>
-            <button id="Face_login_button">Login(之后合并到Capture)</button>
-            <div id="webcam"></div>
+              <p id="pwd_txt">Password</p>
+              <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+              <input id="pwd_input" type="password" name="pwd" value=""/>
+          </form> 
+          <!-- Login -->
+          <a id="Login_button" class="shape" href="#">
+            <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+            <p id="Login_button_txt" class="text">LOGIN</p>
+          </a>
+          <!-- Sign up -->
+          <a id="Face_button" class="shape" href="#">
+            <img id="Login_button_img" class="button " src="/static/images/header/button.png"/>
+            <p id="Login_button_txt" class="text">FACE LOGIN</p>
+          </a>
+        </div>
+        <div id="Login_body" style="display:none;">
           </div>
         </div>
-  </div>
+    </div>
 
       <div id="Display_image">
         <p id="Image_txt" class="h2">GIPFEL</p>
@@ -120,24 +108,6 @@
         </div>
       </div>
 
-      <div id="Download_page">
-          <img id="Download_bgd" src="/static/images/edit/u94.png"/>
-          <a href="#"><img id="Download_close" src="/static/images/edit/close.png"/></a>
-          <p id="Download_title" class="h2">Download Video</p>
-
-          <p id="Download_choice0" class="paragraph">MP4</p>
-          <p id="Download_choice1" class="paragraph">MPEG-4</p>
-          <p id="Download_choice2" class="paragraph">3GP</p>
-          <p id="Download_choice3" class="paragraph">AVI</p>
-          <p id="Download_choice4" class="paragraph">MKV</p>
-          
-          <a href="#"><p id="Download_address0" class="paragraph">Download Address</p></a>
-          <a href="#"><p id="Download_address1" class="paragraph">Download Address</p></a>
-          <a href="#"><p id="Download_address2" class="paragraph">Download Address</p></a>
-          <a href="#"><p id="Download_address3" class="paragraph">Download Address</p></a>
-          <a href="#"><p id="Download_address4" class="paragraph">Download Address</p></a>
-      </div>
-      
       <div id="Display_discription">
         <img id="Discription_bgd" class="shape" src="/static/images/video_display/u80.png"/>
         <p id="Discription_title" class="h2">Discription</p>
@@ -150,7 +120,7 @@
         <img id="Author_bgd" class="shape" src="/static/images/video_display/u76.png"/>
         <p id="Author_txt" class="h2">Author</p>
         <img id="Author_img" class="image" src="/static/images/video_display/image_u125.jpg"/>
-        <a href="/personal_page/{{ username }}"><p id="Author_name" class="h2">Starboy</p></a>
+        <a href="personal_page.html"><p id="Author_name" class="h2">Starboy</p></a>
         <p id="Author_discription" class="paragraph">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
       </div>
 
@@ -202,8 +172,8 @@
         <ul>
           <li id="comment0" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
             <!-- comment (Shape) -->
             <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
             <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
@@ -214,8 +184,8 @@
           </li>
           <li id="comment1" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ username }}"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
-            <a href="/personal_page/{{ username }}"><p class="h2 Comments_name">Starboy</p></a>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
             <!-- comment (Shape) -->
             <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
             <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
@@ -227,18 +197,18 @@
         </ul>
         <div id="blank"></div>
         <!-- Footer -->
-      <div id = "Footer">
-        <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-        <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-        <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
-        <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
-        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-        <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
-        <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
-      </div>
+        <div id = "Footer">
+          <a href="#"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+          <a href="#"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+          <a href="#"><p id="Footer_txt_3" class="paragraph">Join us</p></a>
+          <img id="Footer_logo" src="/static/images/header/logo_footer.png"/>
+          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+          <img id="slice_1" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_2" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_3" class="slice" src="/static/images/header/slice.png"/>
+          <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
+        </div>
       </div>
     </div>
 
@@ -259,11 +229,6 @@
 		var video=['http://movie.ks.js.cn/flv/other/1_0.mp4->video/mp4'];
 		CKobject.embed('/static/ckplayer/ckplayer/ckplayer.swf','a1','ckplayer_a1','1100','600',false,flashvars,video)
 	</script>
-<script type="text/javascript">
-  $("#capture_btn").click(function(){
-      webcam.capture();
-  });
-</script>
     {% if username %}
     <script>
         document.getElementById("Search_login").style.visibility="hidden";
