普通注册可以用了，人脸注册还没做，人脸登录老是认不出脸，需要改进一下

--- a/templates/Authentication/privious/register.html
+++ b/templates/Authentication/privious/register.html
@@ -1,5 +1,5 @@
 <h1>注册页面：</h1>
 <form method = 'post' enctype="multipart/form-data">
-{{uf.as_p}}
+<input type="input" id="user", name="user" />
 <input type="submit" value = "ok" />
 </form>
