--- a/templates/Webpages/signup.html
+++ b/templates/Webpages/signup.html
@@ -118,17 +118,17 @@
       <p id="signup_usr_hint" class="paragraph">Username cannot be none!</p>
 
       <p id="signup_pwd_txt" class="h2">Password:</p>
-      <input id="signup_pwd_input" class="ax_text_field" type="password" value=""/>
+      <input id="signup_pwd_input" type="password" class="ax_text_field" type="password" value=""/>
       <p id="signup_pwd_hint" class="paragraph">Password is too short!</p>
 
       <p id="signup_rpwd_txt" class="h2">Reenter Password:</p>
-      <input id="signup_rpwd_input" class="ax_text_field" type="password" value=""/>
+      <input id="signup_rpwd_input" type="password" class="ax_text_field" type="password" value=""/>
       <p id="signup_rpwd_hint" class="paragraph">Different passwords!</p>
 
       <p id="signup_dis_txt" class="h2">Discription:</p>
       <textarea id="signup_dis_input" class="ax_text_area"></textarea>
 
-      <a id="Signup_bt" class="shape" href="/">
+      <a id="Signup_bt" class="shape">
         <img id="Signup_bt_bgd" src="/static/images/edit/u62.png"/>
         <p id="Signup_bt_txt">Sign up</p>
       </a>
